modified index.html with select and options

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             <h1>Cool Web Project</h1>
         </header>
 
-        <main></main>
+        <main>
+            <select class="select">
+                <option value="one">Mohamed</option>
+                <option value="two">Pete</option>
+            </select>
+        </main>
 
         <footer>&copy; 2021 Aspiring Software Developer</footer>
 
