--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         <link rel="stylesheet" href="./styles/style.css" />
-       
 
         <title>Cool Web</title>
     </head>
@@ -21,6 +20,13 @@
                 <option value="one">Mohamed</option>
                 <option value="two">Pete</option>
             </select>
+            <div class="contain">
+                <h4 id="name"></h4>
+                <p id="pronouns"></p>
+                <p class="favoritePlace"></p>
+                <h6>Hobbies:</h6>
+                <ul class="hobbies"></ul>
+            </div>
         </main>
 
         <footer>&copy; 2021 Aspiring Software Developer</footer>
