added function that will render our user

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
 
         <main>
-            <select class="select">
+            <select class="select" name="name" id="name">
                 <option value="one">Mohamed</option>
                 <option value="two">Pete</option>
             </select>
