added hidden class in styles and index, and background color for each person

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <option value="one">Mohamed</option>
                 <option value="two">Pete</option>
             </select>
-            <div class="contain">
+            <div class="contain hidden">
                 <h4 id="name"></h4>
                 <p id="pronouns"></p>
                 <p class="favoritePlace"></p>
